Поправил замечания по hw09

--- a/hw09.ipynb
+++ b/hw09.ipynb
@@ -46,14 +46,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(a) - брошено 3 кости, известно что на одной выпало 6, какова вероятность что на остальных двух тоже выпало по шестерке. Ответ: p = ${\\frac{1}{6}}*{\\frac{1}{6}}=\\frac{1}{36}$"
+    "(a) - брошено 3 кости, известно что на одной выпало 6, какова вероятность что на остальных двух тоже выпало по \n",
+    "шестерке. \n",
+    "\n",
+    "P(A|B) = $\\frac{P({A}\\cap{B})}{P(B)}$, где A-вероятность что выпали 3 шестерки, B-вероятность что выпала одна шестерка. $P({A}\\cap{B})$ = P(A), т.к. множество событий B включает в себя множество событий A, тогда объединение есть событие B, т.е. P(A|B) = $\\frac{P(A)}{P(B)}$\n",
+    "\n",
+    "вероятность того что выпали все шестерки P(A) = $\\frac{1}{6^3}$, вероятность что выпала хотябы одна шестерка P(B) = 1-P($\\overline{B}$), где P($\\overline{B}) = (\\frac{5}{6})^3$\n",
+    "\n",
+    "Ответ: p = $\\frac{({\\frac{1}{6}})^3}{1-(\\frac{5}{6})^3}$ = $\\frac{1}{6^3-5^3}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.01098901098901099\n"
+     ]
+    }
+   ],
+   "source": [
+    "p=1/(6**3-5**3)\n",
+    "print(p)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(a) - брошено 3 кости, известно что на двух выпало одинаковое число, какова вероятность что на всех по шестерке. Ответ: вероятность того, что на двух костях, на которых выпало одинаковое число и это чисто 6 -  $p_{1}$ = $\\frac{1}{6}$, вероятность что на оставшейся кости также выпало 6 - $p_{2}$ = $\\frac{1}{6}$, общая вероятность p = $p_{1}*p_{2}=\\frac{1}{36}$"
+    "(a) - брошено 3 кости, известно что на двух выпало одинаковое число, какова вероятность что на всех по шестерке. \n",
+    "\n",
+    "P(A|B) = $\\frac{P({A}\\cap{B})}{P(B)}$, где A-вероятность что выпали 3 шестерки, B-вероятность, что на двух костях выпали одинаковые цифры. $P({A}\\cap{B})$ = P(A), т.к. множество событий B включает в себя множество событий A, тогда объединение есть событие B, т.е. P(A|B) = $\\frac{P(A)}{P(B)}$\n",
+    "\n",
+    "вероятность того, что выпали все шестерки P(A) = $\\frac{1}{6^3}$, вероятность что на двух кубиках выпали одинаковые числа P(B) = ($\\overline{B}$), где P($\\overline{B}) = \\frac{3*6^2}{6^3} = \\frac{1}{2}$ \n",
+    "\n",
+    "Ответ: p = $\\frac{({\\frac{1}{6}})^3}{\\frac{1}{2}} = \\frac{2}{6^3}$\n"
    ]
   },
   {
@@ -82,15 +113,25 @@
    "metadata": {},
    "source": [
     "(a) - Вероятность того что при случайном выборе пары попадется качественная $P_{кач}$ = 1 - $P_{некач}$\n",
-    "$P_{некач}$ = 0.1*0.4 + 0.2*0.3 + 0.15*0.3 = 0.145, следовательно $P_{кач}$ = 1 - 0.145 = 0.855"
+    "\n",
+    "$P_{некач} = {0.1}*{0.4} + {0.2}*{0.3} + {0.15}*{0.3} = 0.145$, следовательно $P_{кач}$ = 1 - 0.145 = 0.855"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(b) - Вероятность того что при случайном выборе пары попадется некачественная вторая модель $P_{некач(2)}$ = 0.2*0.3 = 0.06"
+    "(b) - P(A|B) = $\\frac{P({A}\\cap{B})}{P(B)}$, где A-вероятность что выбрали вторую модель, B-вероятность, что выбрали не качественную пару, где $P({A}\\cap{B}) = {0.2}*{0.3}$, P(B) = ${0.1}*{0.4} + {0.2}*{0.3} + {0.15}*{0.3} = 0.145$\n",
+    "\n",
+    "P(A|B) = $\\frac{0.06}{0.145}$ = 0.414"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
