--- a/hw09.ipynb
+++ b/hw09.ipynb
@@ -32,7 +32,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(b) - Рассуждения такие же как в предыдущем вопросе, тольно из всех возможных \"удачных расстановок\" необходимо исключить одну - где все фигуры стоят на главной диагонали, следовательно p = $\\frac{n!-1}{C_{n^{2}}^{n}}$"
+    "(b) - Рассуждения такие же как в предыдущем вопросе, тольно из всех возможных \"удачных расстановок\" необходимо исключить одну - где все фигуры стоят на главной диагонали, следовательно p = $\\frac{n!-1}{C_{n^{2}}^{n}}$\n",
+    "PS. \n",
+    "\n",
+    "_Я видел лекцию с разбором. Ну я бы сам не смог)_"
    ]
   },
   {
@@ -82,9 +85,9 @@
     "\n",
     "P(A|B) = $\\frac{P({A}\\cap{B})}{P(B)}$, где A-вероятность что выпали 3 шестерки, B-вероятность, что на двух костях выпали одинаковые цифры. $P({A}\\cap{B})$ = P(A), т.к. множество событий B включает в себя множество событий A, тогда объединение есть событие B, т.е. P(A|B) = $\\frac{P(A)}{P(B)}$\n",
     "\n",
-    "вероятность того, что выпали все шестерки P(A) = $\\frac{1}{6^3}$, вероятность что на двух кубиках выпали одинаковые числа P(B) = ($\\overline{B}$), где P($\\overline{B}) = \\frac{3*6^2}{6^3} = \\frac{1}{2}$ \n",
+    "вероятность того, что выпали все шестерки P(A) = $\\frac{1}{6^3}$, вероятность что на двух кубиках выпали одинаковые числа $P(B) = \\frac{6^2}{6^3} = \\frac{1}{6}$ \n",
     "\n",
-    "Ответ: p = $\\frac{({\\frac{1}{6}})^3}{\\frac{1}{2}} = \\frac{2}{6^3}$\n"
+    "Ответ: p = $\\frac{({\\frac{1}{6}})^3}{\\frac{1}{6}} = \\frac{1}{36} $\n"
    ]
   },
   {
