--- a/hw09.ipynb
+++ b/hw09.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -85,9 +85,9 @@
     "\n",
     "P(A|B) = $\\frac{P({A}\\cap{B})}{P(B)}$, где A-вероятность что выпали 3 шестерки, B-вероятность, что на двух костях выпали одинаковые цифры. $P({A}\\cap{B})$ = P(A), т.к. множество событий B включает в себя множество событий A, тогда объединение есть событие B, т.е. P(A|B) = $\\frac{P(A)}{P(B)}$\n",
     "\n",
-    "вероятность того, что выпали все шестерки P(A) = $\\frac{1}{6^3}$, вероятность что на двух кубиках выпали одинаковые числа $P(B) = \\frac{6^2}{6^3} = \\frac{1}{6}$ \n",
+    "вероятность того, что выпали все шестерки P(A) = $\\frac{1}{6^3}$, вероятность что на двух кубиках выпали одинаковые числа $P(B) = 1-P(\\overline{B}) = 1-\\frac{(6*5*4)}{6^3} = \\frac{16}{6^2}$ \n",
     "\n",
-    "Ответ: p = $\\frac{({\\frac{1}{6}})^3}{\\frac{1}{6}} = \\frac{1}{36} $\n"
+    "Ответ: p = $\\frac{({\\frac{1}{6}})^3}{\\frac{16}{6^2}} = \\frac{1}{96} $\n"
    ]
   },
   {
@@ -153,7 +153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
