--- a/fw02.ipynb
+++ b/fw02.ipynb
@@ -5679,7 +5679,7 @@
    "metadata": {},
    "source": [
     "Пусть $H_0$ - средний уровень удовлетворенности уволившихся сотрудников \n",
-    "равен среднему уровеню удовлетворенности работающих сотрудников"
+    "равен среднему уровеню удовлетворенности работающих сотрудников. $H_1$ - уровень удовлетворенности уволившихся сотрудников ниже, и это можно считать одной из причин уволнения"
    ]
   },
   {
@@ -5720,13 +5720,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "p-value << 0.05, это значит, что гипотиза $H_0$, о равенстве уровней удовлетворенности отвергается в пользу $H_1$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# p-value << 0.05, это значит, что гипотиза о равенстве уровней удовлетворенности "
-   ]
+   "source": []
   }
  ],
  "metadata": {
